<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:fontFamily="cursive"
        android:text="@string/se_connecter"
        android:textColor="@color/lightblue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUtilisateur"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:autofillHints="none"
        android:background="@drawable/et_custom"
        android:hint="@string/nom_d_utilisateur"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitre" />

    <EditText
        android:id="@+id/etMdp"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints="none"
        android:background="@drawable/et_custom"
        android:hint="@string/mot_de_passe"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUtilisateur" />

    <Button
        android:id="@+id/bConnexion"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:text="@string/connexion"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bChangerMdp"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@color/transparent"
        android:text="@string/changer_le_mot_de_passe"
        android:textColor="@color/lightblue"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/bConnexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bNouvUtil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/s_inscrire"
        android:textAlignment="textStart"
        android:textColor="@color/lightblue"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bChangerMdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvNouvUtil"
        app:layout_constraintTop_toBottomOf="@+id/etMdp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvNouvUtil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nouvel_utilisateur"
        android:textAlignment="textEnd"
        android:textColor="@color/lightblue"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/bChangerMdp"
        app:layout_constraintEnd_toStartOf="@+id/bNouvUtil"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMdp"
        app:layout_constraintVertical_bias="0.062" />

</androidx.constraintlayout.widget.ConstraintLayout>